--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
@@ -22,6 +23,7 @@
     "@vue/eslint-config-standard": "^9.0.1",
     "eslint": "^9.25.0",
     "eslint-plugin-vue": "^10.0.0",
+    "gh-pages": "^6.3.0",
     "sass": "^1.86.3",
     "vite": "^6.3.1"
   }
